Added styling to the header section

--- a/index.html
+++ b/index.html
@@ -1,29 +1,41 @@
 <!DOCTYPE html>
 <html lang="em">
+
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Landing Page</title>
-<link rel="stylesheet" href="styles.css"/>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Landing Page</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
-<header>
-<img src="./Images/smallProgrammer.png" alt="girl sitting at a computer"/>
-<nav class="header-menu">
-<ul>
-<li><a href="#">About Me</a></li>
-<li><a href="#">Sample Projects</a></li>
-<li><a href="#">Contact</a></li>
-</ul>
-</nav>
-<div class="about-me">
-<h1>This website is awesome!</h1>
-<h3>This website is another try of creating a landing page. 
-Click here if you want to know more about me.</h3>
-<button class="about-me-button">Click Here</button>
-<img src="./Images/computer.jpg" alt="computer screen"/>
-</div>
-</header>
+    <div class="container">
+        <nav class="header-menu">
+            <div class="header-logo">
+                <img src="./Images/smallProgrammer-white.png" alt="girl sitting at a computer" />
+            </div>
+            <div class="header-links">
+                <ul>
+                    <li><a href="#">About Me</a></li>
+                    <li><a href="#">Sample Projects</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
+
+        <div class="about-me">
+            <div class="about-me-text">
+                <h1>This website is awesome!</h1>
+                <h3>This website is another try at creating a landing page.
+                    Click here if you want to know more about me.</h3>
+                <button class="about-me-button">Click Here</button>
+            </div>
+            <div class="about-me-image">
+                <img src="./Images/computer.jpg" alt="computer screen" />
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
