Made adjustments to the header (hero) section in CSS.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto"/>
     <link rel="stylesheet" href="styles.css" />
 </head>
 
@@ -27,12 +28,12 @@
         <div class="about-me">
             <div class="about-me-text">
                 <h1>This website is awesome!</h1>
-                <h3>This website is another try at creating a landing page.
-                    Click here if you want to know more about me.</h3>
-                <button class="about-me-button">Click Here</button>
+                <p>This website is another try at creating a landing page.
+                    Click here if you want to know more about me.</p>
+                <button type="button">Click Here</button>
             </div>
             <div class="about-me-image">
-                <img src="./Images/computer.jpg" alt="computer screen" />
+                <img src="./Images/computerScreen.jpg" alt="computer screen" />
             </div>
         </div>
     </div>
