Finished most of the styling. Second button not finished.

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 </div>
                 <div class="header-links">
                     <ul>
-                        <li><a href="#">About Me</a></li>
-                        <li><a href="#">Sample Projects</a></li>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Projects</a></li>
                         <li><a href="#">Contact</a></li>
                     </ul>
                 </div>
@@ -44,7 +44,7 @@
                         <button type="button">Sign Up</button>
                     </div>
                     <div class="about-me-image">
-                        <img src="./Images/girl-of-the-world.png" alt="Girl conquering the world" />
+                        <img src="./Images/girl-of-the-world-rev.png" alt="Girl conquering the world" />
                     </div>
                 </div>
             </inner-column>
@@ -53,7 +53,7 @@
         <section>
             <div class="information">
                 <inner-column>
-                    <h1>Some Random Information</h1>
+                    <h1 class="info-header">Information</h1>
                     <div class="info-image">
                         <div class="girl-image">
                             <img src="./Images/girl-on-horse.png" alt="Girl on horse"/>
@@ -117,7 +117,7 @@
         <section>
             <inner-column>
                 <div class="footer">
-                    <p> Copyright © The Odin Project 2021 </p>
+                    <p> Copyright © The Odin Project 2022 </p>
                 </div>
             </inner-column>
         </section>
